git commit -m "feat: add geohash-based doctor location search
- Add doctors_by_geohash lookup table
- Add GeohashUtil for encoding and neighbor lookup
- Replace clinicAddress with street, area, city fields
- Update GeocodingService to use street+area+city query
- Fix clinic uniqueness table to use city+area+building as key
- Update DoctorModel, DoctorRequest, DoctorQuery, DoctorSchema
- Replace full table scan in getDoctorsByLocation with geohash prefix query"